// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compileShader allows units to declare themselves to exist in one program only 1`] = `
"/*** PROGRAM: VERTEX ***/

void main()
{
  /*** UNIT: Position (Vertex Only) ***/
  float Position_Vertex_Only_1 = 1.0;
  
  
  /*** UNIT: Anonymous ***/
  bool Anonymous_3 = true;
  {
    bool value = Anonymous_3;
    gl_Position = Position_Vertex_Only_1;
    Anonymous_3 = value;
  }
  
  
}"
`;

exports[`compileShader allows units to declare themselves to exist in one program only 2`] = `
"/*** PROGRAM: FRAGMENT ***/

void main()
{
  /*** UNIT: Color (Fragment Only) ***/
  float Color_Fragment_Only_2 = 2.0;
  
  
  /*** UNIT: Anonymous ***/
  bool Anonymous_3 = true;
  {
    bool value = Anonymous_3;
    gl_FragColor = Color_Fragment_Only_2;
    Anonymous_3 = value;
  }
  
  
}"
`;

exports[`compileShader compiles shader programs from the given unit 1`] = `
"/*** PROGRAM: VERTEX ***/

void main()
{
  /*** UNIT: Anonymous ***/
  bool Anonymous_1 = true;
  
  
}"
`;

exports[`compileShader compiles shader programs from the given unit 2`] = `
"/*** PROGRAM: FRAGMENT ***/

void main()
{
  /*** UNIT: Anonymous ***/
  bool Anonymous_1 = true;
  
  
}"
`;

exports[`compileShader embeds body chunks in scoped blocks, with a local \`value\` variable 1`] = `
"/*** PROGRAM: FRAGMENT ***/

void main()
{
  /*** UNIT: Anonymous ***/
  bool Anonymous_1 = true;
  {
    bool value = Anonymous_1;
    gl_FragColor.rgb = vec3(1.0, 0.0, 0.0);
    Anonymous_1 = value;
  }
  
  
}"
`;

exports[`compileShader resolves dependencies to expressions 1`] = `
"/*** PROGRAM: VERTEX ***/

void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = 123.0 + 4.0;
  
  
}"
`;

exports[`compileShader resolves dependencies to expressions 2`] = `
"/*** PROGRAM: FRAGMENT ***/

void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = 123.0 + 4.0;
  
  
}"
`;

exports[`compileShader resolves dependencies to other units 1`] = `
"/*** PROGRAM: VERTEX ***/

void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = 123.0;
  
  
  /*** UNIT: Anonymous ***/
  float Anonymous_2 = Anonymous_1;
  
  
}"
`;

exports[`compileShader resolves dependencies to other units 2`] = `
"/*** PROGRAM: FRAGMENT ***/

void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = 123.0;
  
  
  /*** UNIT: Anonymous ***/
  float Anonymous_2 = Anonymous_1;
  
  
}"
`;

exports[`compileShader resolves dependencies to other units from within expressions 1`] = `
"/*** PROGRAM: VERTEX ***/

void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = 123.0;
  
  
  /*** UNIT: Anonymous ***/
  float Anonymous_2 = Anonymous_1 * 2.0;
  
  
}"
`;

exports[`compileShader resolves dependencies to other units from within expressions 2`] = `
"/*** PROGRAM: FRAGMENT ***/

void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = 123.0;
  
  
  /*** UNIT: Anonymous ***/
  float Anonymous_2 = Anonymous_1 * 2.0;
  
  
}"
`;

exports[`compileShader supports snippets 1`] = `
"/*** PROGRAM: VERTEX ***/


			float snippet_c8b24f9130(in float a) {
				return a * 2.0;
			}
void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = snippet_c8b24f9130(1.0);
  
  
}"
`;

exports[`compileShader supports snippets 2`] = `
"/*** PROGRAM: FRAGMENT ***/


			float snippet_c8b24f9130(in float a) {
				return a * 2.0;
			}
void main()
{
  /*** UNIT: Anonymous ***/
  float Anonymous_1 = snippet_c8b24f9130(1.0);
  
  
}"
`;
